templates/solace-vmr.template
{
    "AWSTemplateFormatVersion": "2010-09-09",
    "Description": "CloudFormation template to deploy Solace HA Message Routers on AWS",
    "Metadata": {
        "AWS::CloudFormation::Interface": {
            "ParameterGroups": [
                {
                    "Label": { "default": "Solace Parameters" },
                    "Parameters": [
                        "SolaceDockerURL",
                        "AdminPassword",
                        "ContainerLoggingFormat"
                    ]
                },
                {
                    "Label": { "default": "Network Configuration" },
                    "Parameters": [
                        "VPCID",
                        "NumberOfAZs",
                        "UsePrivateSubnets",
                        "PublicSubnetIDs",
                        "PrivateSubnetIDs",
                        "RemoteAccessCIDR",
                        "SSHSecurityGroupID"
                    ]
                },
                {
                    "Label": { "default": "Common Amazon EC2 Configuration" },
                    "Parameters": [
                        "KeyPairName",
                        "BootDiskSize"
                    ]
                },
                {
                    "Label": { "default": "MessageRouterInstance Configuration" },
                    "Parameters": [
                        "MessageRouterNodeInstanceType",
                        "MessageRouterNodeStorage"
                    ]
                },
                {
                    "Label": { "default": "MonitorInstance Configuration" },
                    "Parameters": [ "MonitorNodeInstanceType" ]
                },
                {
                    "Label": { "default": "AWS Quick Start Configuration" },
                    "Parameters": [
                        "QSS3BucketName",
                        "QSS3KeyPrefix"
                    ]
                }
            ],
            "ParameterLabels": {
                "SolaceDockerURL": {
                    "default": "Solace Docker URL"
                },
                "AdminPassword": {
                    "default": "Password to access SolOS admin console and SEMP"
                },
                "ContainerLoggingFormat": {
                    "default": "Container logging format"
                },
                "BootDiskSize": {
                    "default": "Boot Disk Capacity (GiB)"
                },
                "MessageRouterNodeInstanceType": {
                    "default": "Instance Type"
                },
                "MessageRouterNodeStorage": {
                    "default": "Persistent Storage"
                },
                "MonitorNodeInstanceType": {
                    "default": "Instance Type"
                },
                "KeyPairName": {
                    "default": "Key Pair Name"
                },
                "NumberOfAZs": {
                    "default": "Number of Availability Zones to use"
                },
                "RemoteAccessCIDR": {
                    "default": "Allowed External Access CIDR"
                },
                "SSHSecurityGroupID": {
                    "default": "Security group allowed to access console ssh"
                },
                "UsePrivateSubnets": {
                    "default": "Use private subnets"
                },
                "VPCID": {
                    "default": "VPC ID"
                },
                "PrivateSubnetIDs": {
                    "default": "Private Subnet IDs"
                },
                "PublicSubnetIDs": {
                    "default": "Public Subnet IDs"
                },
                "QSS3BucketName": {
                    "default": "Quick Start S3 Bucket Name"
                },
                "QSS3KeyPrefix": {
                    "default": "Quick Start S3 Key Prefix"
                }
            }
        }
    },
    "Parameters": {
        "SolaceDockerURL": {
            "Description": "Required URL to enterprise or Evaluation VMR, not Community",
            "Type": "String"
        },
        "AdminPassword": {
            "Description": "Required password to access SolOS admin console and SEMP",
            "Type": "String"
        },
        "ContainerLoggingFormat": {
            "AllowedValues": [
                "graylog",
                "legacy",
                "raw",
                "rfc5424"
            ],
            "ConstraintDescription": "Must be a valid container logging format.",
            "Default": "graylog",
            "Description": "Solace VMR logging format in CloudWatch",
            "Type": "String"
        },
        "BootDiskSize": {
            "ConstraintDescription": "Deployment supports 8 to 128 GB for boot volumes",
            "Default": "24",
            "Description": "Allocated EBS storage for boot disk",
            "MaxValue": "128",
            "MinValue": "8",
            "Type": "Number"
        },
        "MessageRouterNodeInstanceType": {
            "AllowedValues": [
                "t2.large",
                "t2.xlarge",
                "m3.large",
                "m3.xlarge",
                "m4.large",
                "m4.xlarge",
                "m4.2xlarge",
                "m4.4xlarge",
                "m5.xlarge",
                "m5.2xlarge",
                "m5.4xlarge",
                "c4.xlarge"
            ],
            "ConstraintDescription": "Must be a valid EC2 instance type.",
            "Default": "t2.large",
            "Description": "Instance Type for Solace Message Router",
            "Type": "String"
        },
        "MessageRouterNodeStorage": {
            "ConstraintDescription": "No more than 640 GiB per device.",
            "Default": "0",
            "Description": "Allocated EBS storage for each block device (in GiB); 0 indicates ephemeral storage only",
            "AllowedValues": [
                "0",
                "20",
                "40",
                "80",
                "160",
                "320",
                "640"
            ],
            "Type": "Number"
        },
        "MonitorNodeInstanceType": {
            "AllowedValues": [
                "t2.medium",
                "t2.large",
                "t2.xlarge",
                "m3.large",
                "m3.xlarge",
                "m4.large",
                "m4.xlarge",
                "c4.xlarge"
            ],
            "ConstraintDescription": "Must be a valid EC2 instance type.",
            "Default": "t2.large",
            "Description": "Instance Type for Solace Message Router",
            "Type": "String"
        },
        "KeyPairName": {
            "Description": "Name of an existing EC2 key pair within the AWS region; all instances will launch with this key pair",
            "Type": "AWS::EC2::KeyPair::KeyName"
        },
        "NumberOfAZs": {
            "ConstraintDescription": "3 means each node in own az, 2 puts monitor and backup in one az",
            "Default": "3",
            "Description": "Number of availability zones to use",
            "AllowedValues": [
                "2",
                "3"
            ],
            "Type": "Number"
        },
        "RemoteAccessCIDR": {
            "AllowedPattern": "^(([0-9]|[1-9][0-9]|1[0-9]{2}|2[0-4][0-9]|25[0-5])\\.){3}([0-9]|[1-9][0-9]|1[0-9]{2}|2[0-4][0-9]|25[0-5])(\\/([0-9]|[1-2][0-9]|3[0-2]))$",
            "ConstraintDescription": "CIDR block parameter must be in the form x.x.x.x/x",
            "Description": "Allowed CIDR block for external access to cluster nodes",
            "Default": "0.0.0.0/0",
            "Type": "String"
        },
        "SSHSecurityGroupID": {
            "Description": "ID of the SSH Security Group (e.g., sg-7f16e910)",
            "Type": "AWS::EC2::SecurityGroup::Id"
        },
        "UsePrivateSubnets": {
            "AllowedValues": [
                "true",
                "false"
            ],
            "Default": "true",
            "Description": "Whether to use Private Subnets with fronting Bastion Servers",
            "Type": "String"
        },
        "PrivateSubnetIDs": {
            "Description": "Comma separated list of VPC private subnet IDs for the cluster deployment (e.g. subnet-4b8d329f,subnet-bd73afc8); VPC must exist with proper configuration for Solace cluster access. Note: This will be skipped if 'Use private subnets' is set to 'false'",
            "Type": "List<AWS::EC2::Subnet::Id>"
        },
         "PublicSubnetIDs": {
            "Description": "Comma separated list of VPC public subnet IDs for the cluster deployment (e.g. subnet-4b8d329f,subnet-bd73afc8); VPC must exist with proper configuration for Solace cluster access",
            "Type": "List<AWS::EC2::Subnet::Id>"
        },
        "VPCID": {
            "Description": "ID of the VPC (e.g. vpc-0343606e)",
            "Type": "AWS::EC2::VPC::Id"
        },
        "QSS3BucketName": {
            "AllowedPattern": "^[0-9a-zA-Z]+([0-9a-zA-Z-]*[0-9a-zA-Z])*$",
            "ConstraintDescription": "Quick Start bucket name can include numbers, lowercase letters, uppercase letters, and hyphens (-). It cannot start or end with a hyphen (-).",
            "Default": "solace-products",
            "Description": "S3 bucket name for the Quick Start assets. Quick Start bucket name can include numbers, lowercase letters, uppercase letters, and hyphens (-). It cannot start or end with a hyphen (-).",
            "Type": "String"
        },
        "QSS3KeyPrefix": {
            "AllowedPattern": "^[0-9a-zA-Z-/]*$",
            "ConstraintDescription": "Quick Start key prefix can include numbers, lowercase letters, uppercase letters, hyphens (-), and forward slash (/).",
            "Default": "solace-aws-ha-quickstart/latest/",
            "Description": "S3 key prefix for the Quick Start assets. Quick Start key prefix can include numbers, lowercase letters, uppercase letters, hyphens (-), and forward slash (/).",
            "Type": "String"
        }
    },
    "Mappings": {
        "AWSInfoRegionMap": {
            "ap-northeast-1": {
                "Partition": "aws",
                "QuickStartS3URL": "https://s3.amazonaws.com"
            },
            "ap-northeast-2": {
                "Partition": "aws",
                "QuickStartS3URL": "https://s3.amazonaws.com"
            },
            "ap-south-1": {
                "Partition": "aws",
                "QuickStartS3URL": "https://s3.amazonaws.com"
            },
            "ap-southeast-1": {
                "Partition": "aws",
                "QuickStartS3URL": "https://s3.amazonaws.com"
            },
            "ap-southeast-2": {
                "Partition": "aws",
                "QuickStartS3URL": "https://s3.amazonaws.com"
            },
            "ca-central-1": {
                "Partition": "aws",
                "QuickStartS3URL": "https://s3.amazonaws.com"
            },
            "eu-central-1": {
                "Partition": "aws",
                "QuickStartS3URL": "https://s3.amazonaws.com"
            },
            "eu-west-1": {
                "Partition": "aws",
                "QuickStartS3URL": "https://s3.amazonaws.com"
            },
            "eu-west-2": {
                "Partition": "aws",
                "QuickStartS3URL": "https://s3.amazonaws.com"
            },
            "sa-east-1": {
                "Partition": "aws",
                "QuickStartS3URL": "https://s3.amazonaws.com"
            },
            "us-east-1": {
                "Partition": "aws",
                "QuickStartS3URL": "https://s3.amazonaws.com"
            },
            "us-east-2": {
                "Partition": "aws",
                "QuickStartS3URL": "https://s3.amazonaws.com"
            },
            "us-west-1": {
                "Partition": "aws",
                "QuickStartS3URL": "https://s3.amazonaws.com"
            },
            "us-west-2": {
                "Partition": "aws",
                "QuickStartS3URL": "https://s3.amazonaws.com"
            }
        }
    },
    "Conditions": {
        "EnableWaitConditions": {
            "Fn::Equals": [
                "1",
                "1"
            ]
        },
        "Use3AZs": {
            "Fn::Equals": [
                {"Ref": "NumberOfAZs"},
                "3"
            ]
        },
        "UsePrivateSubnetsCondition": {
            "Fn::Equals": [
                { "Ref": "UsePrivateSubnets" },
                "true"
            ]
        },
        "GovCloudCondition": {
            "Fn::Equals": [
                { "Ref": "AWS::Region" },
                "us-gov-west-1"
            ]
        }
    },
    "Resources": {
        "SolaceVMRRole": {
            "Type": "AWS::IAM::Role",
            "Properties": {
                "Policies": [
                    {
                        "PolicyDocument": {
                            "Version": "2012-10-17",
                            "Statement": [
                                {
                                    "Action": [ "s3:GetObject" ],
                                    "Resource": {
                                        "Fn::Sub": [
                                            "arn:${Partition}:s3:::${QSS3BucketName}/${QSS3KeyPrefix}*",
                                            {
                                                "Partition": {
                                                    "Fn::If": [
                                                        "GovCloudCondition",
                                                        "aws-us-gov",
                                                        "aws"
                                                    ]
                                                }
                                            }
                                        ]
                                    },
                                    "Effect": "Allow"
                                }
                            ]
                        },
                        "PolicyName": "s3-policy"
                    },
                    {
                        "PolicyDocument": {
                            "Version": "2012-10-17",
                            "Statement": [
                                {
                                    "Action": [
                                        "cloudformation:DescribeStackResources",
                                        "ec2:DescribeInstances",
                                        "ec2:CreateTags"
                                    ],
                                    "Resource": [
                                        "*"
                                    ],
                                    "Effect": "Allow"
                                }
                            ]
                        },
                        "PolicyName": "ec2-policy"
                    },
                    {
                        "PolicyDocument": {
                            "Version": "2012-10-17",
                            "Statement": [
                                {
                                    "Action": [
                                        "logs:CreateLogGroup",
                                        "logs:CreateLogStream",
                                        "logs:PutLogEvents",
                                        "logs:DescribeLogStreams"
                                    ],
                                    "Resource": [
                                        "arn:aws:logs:*:*:*"
                                    ],
                                    "Effect": "Allow"
                                }
                            ]
                        },
                        "PolicyName": "cloudwatch-policy"
                    }
                ],
                "Path": "/",
                "AssumeRolePolicyDocument": {
                    "Statement": [
                        {
                            "Action": [ "sts:AssumeRole" ],
                            "Principal": { "Service": [ "ec2.amazonaws.com" ] },
                            "Effect": "Allow"
                        }
                    ],
                    "Version": "2012-10-17"
                }
            }
        },
        "InstanceProfile": {
            "Type": "AWS::IAM::InstanceProfile",
            "Properties": {
                "Path": "/",
                "Roles": [ { "Ref": "SolaceVMRRole" } ]
            }
        },
        "MessageRouterPrimaryStack": {
            "Type": "AWS::CloudFormation::Stack",
            "Properties": {
                "TemplateURL": {
                    "Fn::Sub": [
                        "https://${QSS3BucketName}.${QSS3Region}.amazonaws.com/${QSS3KeyPrefix}templates/nodecreate.template",
                        {
                            "QSS3Region": {
                                "Fn::If": [
                                    "GovCloudCondition",
                                    "s3-us-gov-west-1",
                                    "s3"
                                ]
                            }
                        }
                    ]
                },
                "Parameters": {
                    "SolaceDockerURL": {
                        "Ref": "SolaceDockerURL"
                    },
                    "AdminPassword": {
                        "Ref": "AdminPassword"
                    },
                    "ContainerLoggingFormat": {
                        "Ref": "ContainerLoggingFormat"
                    },
                    "BootDiskSize": {
                        "Ref": "BootDiskSize"
                    },
                    "ClusterInfoHandle": {
                        "Ref": "ClusterInfoHandle"
                    },
                    "InstanceProfile": {
                        "Ref": "InstanceProfile"
                    },
                    "KeyPairName": {
                        "Ref": "KeyPairName"
                    },
                    "NodeDesignation": "message-router-primary",
                    "NodeInstanceType": {
                        "Ref": "MessageRouterNodeInstanceType"
                    },
                    "NodeSecurityGroup": {
                        "Fn::Join": [
                            ",",
                            [
                                { "Ref" : "MessageRouterSecurityGroup" },
                                { "Ref" : "SolaceInternalSecurityGroup" },
                                { "Ref" : "SolaceInternalSecurityGroupMember" },
                                { "Ref" : "RemoteMgmtSecurityGroup" }
                            ]
                        ]    
                    },
                    "ParentStackName": {
                        "Ref": "AWS::StackName"
                    },
                    "PersistentStorage": {
                        "Ref": "MessageRouterNodeStorage"
                    },
                    "QSS3BucketName": {
                        "Ref": "QSS3BucketName"
                    },
                    "QSS3KeyPrefix": {
                        "Ref": "QSS3KeyPrefix"
                    },
                    "SubnetID": {
                        "Fn::Select": [
                            0,
                            { 
                                "Fn::If": [
                                    "UsePrivateSubnetsCondition",
                                    { "Ref": "PrivateSubnetIDs" }, 
                                    { "Ref": "PublicSubnetIDs" }
                                    ] 
                            }
                        ]
                    }
                }
            }
        },
        "MessageRouterBackupStack": {
            "Type": "AWS::CloudFormation::Stack",
            "Properties": {
                "TemplateURL": {
                    "Fn::Sub": [
                        "https://${QSS3BucketName}.${QSS3Region}.amazonaws.com/${QSS3KeyPrefix}templates/nodecreate.template",
                        {
                            "QSS3Region": {
                                "Fn::If": [
                                    "GovCloudCondition",
                                    "s3-us-gov-west-1",
                                    "s3"
                                ]
                            }
                        }
                    ]
                },
                "Parameters": {
                    "SolaceDockerURL": {
                        "Ref": "SolaceDockerURL"
                    },
                    "AdminPassword": {
                        "Ref": "AdminPassword"
                    },
                    "ContainerLoggingFormat": {
                        "Ref": "ContainerLoggingFormat"
                    },
                    "BootDiskSize": {
                        "Ref": "BootDiskSize"
                    },
                    "ClusterInfoHandle": {
                        "Ref": "ClusterInfoHandle"
                    },
                    "InstanceProfile": {
                        "Ref": "InstanceProfile"
                    },
                    "KeyPairName": {
                        "Ref": "KeyPairName"
                    },
                    "NodeDesignation": "message-router-backup",
                    "NodeInstanceType": {
                        "Ref": "MessageRouterNodeInstanceType"
                    },
                    "NodeSecurityGroup": {
                        "Fn::Join": [
                            ",",
                            [
                                { "Ref" : "MessageRouterSecurityGroup" },
                                { "Ref" : "SolaceInternalSecurityGroup" },
                                { "Ref" : "SolaceInternalSecurityGroupMember" },
                                { "Ref" : "RemoteMgmtSecurityGroup" }
                            ]
                        ]    
                    },
                    "ParentStackName": {
                        "Ref": "AWS::StackName"
                    },
                    "PersistentStorage": {
                        "Ref": "MessageRouterNodeStorage"
                    },
                    "QSS3BucketName": {
                        "Ref": "QSS3BucketName"
                    },
                    "QSS3KeyPrefix": {
                        "Ref": "QSS3KeyPrefix"
                    },
                    "SubnetID": {
                        "Fn::Select": [
                            1,
                            { 
                                "Fn::If": [
                                    "UsePrivateSubnetsCondition",
                                    { "Ref": "PrivateSubnetIDs" }, 
                                    { "Ref": "PublicSubnetIDs" }
                                    ] 
                            }
                        ]
                    }
                }
            }
        },
        "MonitorStack" :{
            "Type": "AWS::CloudFormation::Stack",
            "Properties": {
                "TemplateURL": {
                    "Fn::Sub": [
                        "https://${QSS3BucketName}.${QSS3Region}.amazonaws.com/${QSS3KeyPrefix}templates/nodecreate.template",
                        {
                            "QSS3Region": {
                                "Fn::If": [
                                    "GovCloudCondition",
                                    "s3-us-gov-west-1",
                                    "s3"
                                ]
                            }
                        }
                    ]
                },
                "Parameters": {
                    "SolaceDockerURL": {
                        "Ref": "SolaceDockerURL"
                    },
                    "AdminPassword": {
                        "Ref": "AdminPassword"
                    },
                    "ContainerLoggingFormat": {
                        "Ref": "ContainerLoggingFormat"
                    },
                    "BootDiskSize": {
                        "Ref": "BootDiskSize"
                    },
                    "ClusterInfoHandle": {
                        "Ref": "ClusterInfoHandle"
                    },
                    "InstanceProfile": {
                        "Ref": "InstanceProfile"
                    },
                    "KeyPairName": {
                        "Ref": "KeyPairName"
                    },
                    "NodeDesignation": "monitor",
                    "NodeInstanceType": {
                        "Ref": "MonitorNodeInstanceType"
                    },
                    "NodeSecurityGroup": {
                        "Fn::Join": [
                            ",",
                            [
                                { "Ref" : "SolaceInternalSecurityGroup" },
                                { "Ref" : "SolaceInternalSecurityGroupMember" },
                                { "Ref" : "RemoteMgmtSecurityGroup" }
                            ]
                        ]    
                    },
                    "ParentStackName": {
                        "Ref": "AWS::StackName"
                    },
                    "PersistentStorage": "0",
                    "QSS3BucketName": {
                        "Ref": "QSS3BucketName"
                    },
                    "QSS3KeyPrefix": {
                        "Ref": "QSS3KeyPrefix"
                    },
                    "SubnetID": {
                        "Fn::Select": [
                            { "Fn::If": ["Use3AZs", 2, 1] },
                            { 
                                "Fn::If": [
                                    "UsePrivateSubnetsCondition",
                                    { "Ref": "PrivateSubnetIDs" }, 
                                    { "Ref": "PublicSubnetIDs" }
                                    ] 
                            }
                        ]
                    }
                }
            }
        },
         "SolaceInternalSecurityGroupMember": {
            "Type": "AWS::EC2::SecurityGroup",
            "Properties": {
                "VpcId": {
                    "Ref": "VPCID"
                },
                "GroupDescription": "All Solace Nodes"
            }
        },       
        "SolaceInternalSecurityGroup": {
            "Type": "AWS::EC2::SecurityGroup",
            "DependsOn": [ "SolaceInternalSecurityGroupMember" ],
            "Properties": {
                "VpcId": {
                    "Ref": "VPCID"
                },
                "GroupDescription": "All Solace Nodes",
                "SecurityGroupIngress": [
                    {
                        "IpProtocol": "tcp",
                        "FromPort": "8741",
                        "ToPort": "8741", 
                        "SourceSecurityGroupId": { "Ref": "SolaceInternalSecurityGroupMember" } 
                    },
                    {
                        "IpProtocol": "tcp",
                        "FromPort": "8300",
                        "ToPort": "8302", 
                        "SourceSecurityGroupId": { "Ref": "SolaceInternalSecurityGroupMember" } 
                    },
                    {
                        "IpProtocol": "udp",
                        "FromPort": "8300",
                        "ToPort": "8302", 
                        "SourceSecurityGroupId": { "Ref": "SolaceInternalSecurityGroupMember" } 
                    },
                    {
                        "IpProtocol": "tcp",
                        "FromPort": "55555",
                        "ToPort": "55555",
                        "SourceSecurityGroupId": { "Ref": "SolaceInternalSecurityGroupMember" } 
                    },
                    {
                        "IpProtocol": "tcp",
                        "FromPort": "5550",
                        "ToPort": "5550",
                        "SourceSecurityGroupId": { "Ref": "SolaceInternalSecurityGroupMember" } 
                    }
                ]
            }
        },
        "RemoteMgmtSecurityGroup": {
            "Type": "AWS::EC2::SecurityGroup",
            "Properties": {
                "VpcId": {
                    "Ref": "VPCID"
                },
                "GroupDescription": "All devices external to AWS",
                "SecurityGroupIngress": [
                    {
                        "Fn::If": [
                            "UsePrivateSubnetsCondition",
                            {
                                "IpProtocol": "tcp",
                                "FromPort": "22",
                                "ToPort": "22", 
                                "SourceSecurityGroupId": { "Ref": "SSHSecurityGroupID" } 
                            },
                            {
                                "IpProtocol": "tcp",
                                "FromPort": "22",
                                "ToPort": "22",                             
                                "CidrIp": { "Ref": "RemoteAccessCIDR" } 
                            }
                        ]
                    }
                ]
            }
        },
        "MessageRouterSecurityGroup": {
            "Type": "AWS::EC2::SecurityGroup",
            "Properties": {
                "VpcId": {
                    "Ref": "VPCID"
                },
                "GroupDescription": "Message Router Security Group",
                "SecurityGroupIngress": [
                    {
                        "IpProtocol": "tcp",
                        "FromPort": "55555",
                        "ToPort": "55555",
                        "CidrIp": {
                            "Ref": "RemoteAccessCIDR"
                        }
                    },
                    {
                        "IpProtocol": "tcp",
                        "FromPort": "1883",
                        "ToPort": "1883",
                        "CidrIp": {
                            "Ref": "RemoteAccessCIDR"
                        }
                    },
                    {
                        "IpProtocol": "tcp",
                        "FromPort": "8080",
                        "ToPort": "8080",
                        "CidrIp": {
                            "Ref": "RemoteAccessCIDR"
                        }
                    },
                    {
                        "IpProtocol": "tcp",
                        "FromPort": "80",
                        "ToPort": "80",
                        "CidrIp": {
                            "Ref": "RemoteAccessCIDR"
                        }
                    }
                ]
            }
        },
        "ClusterInfoHandle": {
            "Type": "AWS::CloudFormation::WaitConditionHandle"
        },
        "ClusterInfoCondition": {
            "Type": "AWS::CloudFormation::WaitCondition",
            "Condition": "EnableWaitConditions",
            "DependsOn": ["MessageRouterPrimaryStack", "MessageRouterBackupStack", "MonitorStack"],
            "Properties": {
                "Handle": {
                    "Ref": "ClusterInfoHandle"
                },
                "Timeout": "300",
                "Count": "1"
            }
        },
        "ELB": {
            "Type": "AWS::ElasticLoadBalancing::LoadBalancer",
            "DependsOn": ["MessageRouterPrimaryStack"],
            "Condition": "UsePrivateSubnetsCondition",
            "Properties":{
                "SecurityGroups": [
                    { "Ref" : "MessageRouterSecurityGroup" },
                    { "Ref" : "SolaceInternalSecurityGroupMember" }
                ],
                "Subnets" : { "Ref": "PublicSubnetIDs" },
                "Instances" : [
                    {"Fn::GetAtt": ["MessageRouterPrimaryStack","Outputs.EC2ID"]},
                    {"Fn::GetAtt": ["MessageRouterBackupStack","Outputs.EC2ID"]},
                    {"Fn::GetAtt": ["MonitorStack","Outputs.EC2ID"]}
                ],
                "HealthCheck" : {
                    "Target" : {
                        "Fn::Join" : [ "", [ "HTTP:", 5550, "/health-check/guaranteed-active" ] ]
                    },
                    "Timeout" : "3",
                    "Interval" : "5",
                    "UnhealthyThreshold" : "2",
                    "HealthyThreshold" : "2",
                },
                "Listeners" : [
                    {
                    "LoadBalancerPort" : "55555",
                    "InstancePort" : "55555",
                    "Protocol" : "TCP"
                    },{
                    "LoadBalancerPort" : "55003",
                    "InstancePort" : "55003",
                    "Protocol" : "TCP"
                    },{
                    "LoadBalancerPort" : "55443",
                    "InstancePort" : "55443",
                    "Protocol" : "TCP"
                    },{
                    "LoadBalancerPort" : "443",
                    "InstancePort" : "443",
                    "Protocol" : "TCP"
                    },{
                    "LoadBalancerPort" : "8883",
                    "InstancePort" : "8883",
                    "Protocol" : "TCP"
                    },{
                    "LoadBalancerPort" : "8000",
                    "InstancePort" : "8000",
                    "Protocol" : "TCP"
                    },{
                    "LoadBalancerPort" : "8443",
                    "InstancePort" : "8443",
                    "Protocol" : "TCP"
                    },{
                    "LoadBalancerPort" : "5672",
                    "InstancePort" : "5672",
                    "Protocol" : "TCP"
                    },{
                    "LoadBalancerPort" : "5671",
                    "InstancePort" : "5671",
                    "Protocol" : "TCP"
                    },{
                    "LoadBalancerPort" : "9000",
                    "InstancePort" : "9000",
                    "Protocol" : "TCP"
                    },{
                    "LoadBalancerPort" : "9443",
                    "InstancePort" : "9443",
                    "Protocol" : "TCP"
                    },{
                    "LoadBalancerPort" : "1883",
                    "InstancePort" : "1883",
                    "Protocol" : "TCP"
                    },{
                    "LoadBalancerPort" : "80",
                    "InstancePort" : "80",
                    "Protocol" : "HTTP"
                    },{
                    "LoadBalancerPort" : "8080",
                    "InstancePort" : "8080",
                    "Protocol" : "HTTP"
                    }
                ]
            }
        }
    }
}
